[gd_scene load_steps=14 format=3 uid="uid://3ybmkhoy5uh3"]

[ext_resource type="Script" path="res://MixMenu.gd" id="1_0phe3"]
[ext_resource type="PackedScene" uid="uid://03skby2tpkx2" path="res://Scenes/Recipes.tscn" id="1_jbule"]
[ext_resource type="Texture2D" uid="uid://dqqrxknnplxtb" path="res://images/Ingredients/DragonsTooth-100x100.png" id="2_q4evg"]
[ext_resource type="FontFile" uid="uid://8rx68otls0l5" path="res://8bitOperatorPlus8-Bold.ttf" id="2_vqra6"]
[ext_resource type="Texture2D" uid="uid://8klf5q8n0hm5" path="res://images/Ingredients/LunarCheese-100x100.png" id="3_amde7"]
[ext_resource type="Texture2D" uid="uid://dbw0sqhi26v6s" path="res://images/Ingredients/MandrakeSeeds-100x100.png" id="4_2shvq"]
[ext_resource type="Texture2D" uid="uid://bo0up33dg1v6q" path="res://images/BGs/Mixing BG/BG_Mixing_Whole_640x360.png" id="4_6v2uy"]
[ext_resource type="Texture2D" uid="uid://nivgloirya3n" path="res://images/Ingredients/RedAlphaPotion-100x100.png" id="5_rjt6l"]
[ext_resource type="Texture2D" uid="uid://bqx1fneiecn4h" path="res://images/Ingredients/BlueBetaPotion-100x100.png" id="6_720bv"]
[ext_resource type="Texture2D" uid="uid://bbxjgplgjpwy0" path="res://images/Ingredients/YellowGammaPotion-100x100.png" id="7_febcq"]
[ext_resource type="Texture2D" uid="uid://bidcn1iqxcisi" path="res://images/Ingredients/PurplePotion-100x100.png" id="8_kxx8o"]
[ext_resource type="Texture2D" uid="uid://bmcw4ssakrbmr" path="res://images/Ingredients/GreenPotion-100x100.png" id="9_q7sqp"]
[ext_resource type="Texture2D" uid="uid://cc0im2iyckj20" path="res://images/Ingredients/OrangePotion-100x100.png" id="10_040bh"]

[node name="MixMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_0phe3")
dragonPic = ExtResource("2_q4evg")
cheesePic = ExtResource("3_amde7")
seedPic = ExtResource("4_2shvq")
alphaPic = ExtResource("5_rjt6l")
betaPic = ExtResource("6_720bv")
gammaPic = ExtResource("7_febcq")
purplePic = ExtResource("8_kxx8o")
greenPic = ExtResource("9_q7sqp")
orangePic = ExtResource("10_040bh")

[node name="Panel" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
anchor_right = 1.00158
anchor_bottom = 0.99637
offset_right = -1113.82
offset_bottom = -605.648
scale = Vector2(28.8454, 16.1412)
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Recipes" parent="Panel" instance=ExtResource("1_jbule")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.025
anchor_right = 0.562345
anchor_bottom = 0.335861
offset_right = 943.506
offset_bottom = 521.566
scale = Vector2(0.0232855, 0.0232855)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.230229
anchor_top = 0.484784
anchor_right = 0.437265
anchor_bottom = 0.582956
offset_right = 55.7186
offset_bottom = 19.0731
scale = Vector2(0.129397, 0.170733)
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 15
text = "Mixing:"
metadata/_edit_use_anchors_ = true

[node name="MixSlot1" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052868
anchor_top = 0.549835
anchor_right = 0.259903
anchor_bottom = 0.729109
offset_right = 55.7186
offset_bottom = 34.8291
scale = Vector2(0.129397, 0.170733)
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 15
text = "Red Alpha Potion"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MixSlot2" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.372582
anchor_top = 0.549835
anchor_right = 0.579617
anchor_bottom = 0.729109
offset_right = 55.7186
offset_bottom = 34.8291
scale = Vector2(0.129397, 0.170733)
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 15
text = "Red Alpha Potion"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Results" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.624883
anchor_top = 0.614886
anchor_right = 0.831918
anchor_bottom = 0.794156
offset_right = 55.7186
offset_bottom = 34.8292
scale = Vector2(0.129397, 0.170733)
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 15
text = "Red Alpha Potion"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27661
anchor_top = 0.607412
anchor_right = 0.341806
anchor_bottom = 0.670684
offset_right = 26.3922
offset_bottom = 9.46912
scale = Vector2(0.0899256, 0.210907)
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 15
text = "+"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.563348
anchor_top = 0.670644
anchor_right = 0.624048
anchor_bottom = 0.733916
offset_right = 24.572
offset_bottom = 9.46912
scale = Vector2(0.0899256, 0.210907)
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 15
text = "="
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Mixslot1Texture" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.0719352
anchor_top = 0.718658
anchor_right = 0.225195
anchor_bottom = 0.902237
offset_right = 33.8696
offset_bottom = 32.6569
scale = Vector2(0.15326, 0.183579)
mouse_filter = 2
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Mixslot2Texture" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.38481
anchor_top = 0.731048
anchor_right = 0.551748
anchor_bottom = 0.913255
offset_right = 33.3224
offset_bottom = 32.7118
scale = Vector2(0.166938, 0.182206)
mouse_filter = 2
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="ResultsslotTexture" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.818155
anchor_top = 0.625728
anchor_right = 0.978864
anchor_bottom = 0.801136
offset_right = 33.5716
offset_bottom = 32.9838
scale = Vector2(0.160709, 0.175407)
mouse_filter = 2
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.725
anchor_right = 0.983519
anchor_bottom = 0.614373
offset_right = 244.659
offset_bottom = 214.425
grow_horizontal = 0
scale = Vector2(0.040552, 0.102824)
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2

[node name="Recipe button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Recipe
"

[node name="Mix button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Mix
"

[node name="Dragon button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Dragon's Tooth"

[node name="Lunar button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Lunar Cheese"

[node name="Mandrake button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Mandrake Seeds"

[node name="Alpha button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Red Alpha Potion"

[node name="Beta button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Blue Beta Potion"

[node name="Gamma button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Yellow Gamma Potion"

[node name="Back button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vqra6")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="TextureRect" type="TextureRect" parent="Panel"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.99745
anchor_bottom = 1.00628
offset_right = 0.101997
offset_bottom = -0.251152
scale = Vector2(0.0623406, 0.111809)
mouse_filter = 2
texture = ExtResource("4_6v2uy")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Recipe button" to="." method="_on_recipe_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Mix button" to="." method="_on_mix_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Dragon button" to="." method="_on_dragon_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Lunar button" to="." method="_on_lunar_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Mandrake button" to="." method="_on_mandrake_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Alpha button" to="." method="_on_alpha_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Beta button" to="." method="_on_beta_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Gamma button" to="." method="_on_gamma_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Back button" to="." method="_on_back_button_pressed"]
